# AI-Agents

./: .gitignore  README.md
tiny_guardrail/: .env.example  README.md  main.py  pyproject.toml
tiny_guardrail/assets/: .gitignore
tiny_guardrail/dev/: test1.ipynb
tiny_guardrail/src/: crew.py  main.py
tiny_guardrail/src/config/: agents.yaml  tasks.yaml
tiny_guardrail/src/tools/: custom_schema.py  custom_tool.py
