[project]
name = "tiny_guardrail"
version = "0.1.0"
description = "Multi Agent Guardrail App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "better-profanity==0.7.0",
    "crewai[tools]==0.80.0",
    "ollama==0.3.0",
    "presidio-analyzer==2.2.354",
    "presidio-anonymizer==2.2.354",
]

[project.scripts]
tiny_guardrail = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"
